libdir = @libdir@/ksimus

INCLUDES= $(all_includes) -I$(includedir)

METASOURCES = AUTO

lib_LTLIBRARIES =  libksimus-integer.la

AM_LDFLAGS = -shared -avoid-version -module -no-undefined 
libksimus_integer_la_LDFLAGS = $(all_libraries)

libksimus_integer_la_SOURCES =  convertboolinteger.cpp convertfloatinteger.cpp convertintegerbool.cpp convertintegerfloat.cpp extconnintegerin.cpp extconnintegerout.cpp integer1in1out.cpp integer1out.cpp integer2in1out.cpp integer2multibool.cpp integerabs.cpp integeradd.cpp integerand.cpp integerconditional.cpp integerconstinput.cpp integercounter.cpp integerdataselector.cpp integerdelay.cpp integerdivider.cpp integerimplicitconverter.cpp integerinverterarithmetic.cpp integerinverter.cpp integerlatch.cpp integerlineinput.cpp integerlineoutput.cpp integermax.cpp integermin.cpp integermultiplier.cpp integeror.cpp integerremainder.cpp integerspinbox.cpp integerstyle1out.cpp integerstylerange1out.cpp integersubtractor.cpp integerxin1out.cpp integerxor.cpp multibool2integer.cpp packageinteger.cpp

noinst_HEADERS =  convertboolinteger.h convertfloatinteger.h convertintegerbool.h convertintegerfloat.h extconnintegerin.h extconnintegerout.h integer1in1out.h integer1out.h integer2in1out.h integer2multibool.h integerabs.h integeradd.h integerand.h integerconditional.h integerconstinput.h integercounter.h integerdataselector.h integerdelay.h integerdivider.h integerimplicitconverter.h integerinverterarithmetic.h integerinverter.h integerlatch.h integerlineinput.h integerlineoutput.h integermax.h integermin.h integermultiplier.h integeror.h integerremainder.h integerspinbox.h integerstyle1out.h integerstylerange1out.h integersubtractor.h integerxin1out.h integerxor.h multibool2integer.h packageinteger.h
