
EXTRA_DIST = index.docbook arrowDown.png arrowUp.png boolean-counter.docbook boolean-gates.docbook boolean-input.docbook boolean-latches.docbook boolean-output.docbook boolean_7_segment.png boolean_const_false.png boolean_const_true.png boolean_counter.png boolean_counter_2.png boolean_d_latch.png boolean_d_latch_2.png boolean_jk_ff.png boolean_jk_ff_2.png boolean_monoflop.png boolean_monoflop_2.png boolean_multi_d_latch.png boolean_multi_d_latch_2.png boolean_rs_ff.png booleannor.png booleanor.png booleanxnor.png booleanxor.png 

KDE_LANG = en
KDE_DOCS = ksimus-boolean


