INCLUDES = -I$(top_srcdir)/ksimus -I$(top_srcdir)/ksimus/items -I$(top_srcdir)/ksimus/lib -I$(top_srcdir)/ksimus/tools $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libboolean.a
libboolean_a_SOURCES =  boolean1out.cpp booleanand.cpp booleanbutton.cpp booleanled.cpp booleanxin1out.cpp clockgenerator.cpp controlclose.cpp controlpause.cpp controlstop.cpp simtimeinput.cpp
noinst_HEADERS = boolean1out.h booleanand.h booleanbutton.h booleanled.h clockgenerator.h controlclose.h controlpause.h controlstop.h simtimeinput.h
pkginclude_HEADERS = booleanxin1out.h boolean1out.h
AM_CXXFLAGS =  -fPIC
