INCLUDES = -I$(top_srcdir)/ksimus -I$(top_srcdir)/ksimus/items -I$(top_srcdir)/ksimus/lib -I$(top_srcdir)/ksimus/tools $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libio.a
libio_a_SOURCES =  ksimiocomponent.cpp ksimiodevice.cpp ksimiodevicelist.cpp ksimiodeviceoverviewwidget.cpp ksimiodevicepropertybasewidget.cpp ksimiodevicepropertydialog.cpp ksimiodevicepropertygeneralwidget.cpp ksimiodevicepropertypinwidget.cpp ksimiojoinboolin.cpp ksimiojoinboolout.cpp ksimiojoin.cpp ksimiopin.cpp ksimiopinselectiondialog.cpp ksimiopinselectionwidget.cpp ksimiostorage.cpp
noinst_HEADERS =  ksimiocomponent.h ksimiodevice.h ksimiodevicelist.h ksimiodeviceoverviewwidget.h ksimiodevicepropertybasewidget.h ksimiodevicepropertydialog.h ksimiodevicepropertygeneralwidget.h ksimiodevicepropertypinwidget.h ksimiojoinboolin.h ksimiojoinboolout.h ksimiojoin.h ksimiopin.h ksimiopinselectiondialog.h ksimiopinselectionwidget.h ksimiostorage.h
AM_CXXFLAGS =  -fPIC
pkginclude_HEADERS =  ksimiodevice.h ksimiojoinboolin.h ksimiojoinboolout.h ksimiojoin.h ksimiopin.h ksimiodevicepropertygeneralwidget.h ksimiodevicepropertybasewidget.h
